# hivemind

./: Cargo.toml  README.md  build.rs
proto/: hivemind.proto
src/: cli.rs  grpc.rs  main.rs  node.rs  web.rs
