[package]
name = "hivemind"
version = "0.0.0"
authors = ["Richard Anaya"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A simple distribute key value store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.3"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }

[build-dependencies]
tonic-build = "0.3"
