[package]
name = "hivemind"
version = "0.0.0"
authors = ["Richard Anaya"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A simple distribute key value store"
readme="README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.3"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }
hyper = "0"
clap = "3.0.0-beta.1"
env_logger = "0.7"
log = "0.4"
flume = "0.7"

[build-dependencies]
tonic-build = "0.3"
